# ujimaru

./: .gitignore  README.md
.github/workflows/: job.yml
text-generate-api/: README.md  pyproject.toml
text-generate-api/tests/: test_text_generate_api.py
tweet-crawler/: Cargo.toml  README.md
twitter-client/: Cargo.toml  README.md  cronjob.sh  go.mod  go.sum  t.sh
twitter-client/src/: main.go  main.rs
twitter-crawler/: .gitignore  README.md  go.mod  go.sum
twitter-crawler/src/: crawler.go  main.go  try.go
ujimaru-api/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
ujimaru-markov-experiment/: .gitignore  pyproject.toml
ujimaru-markov-experiment/tests/: test_ujimaru_markov_experiment.py
ujimaru-markov-experiment/ujimaru_markov_experiment/: build_model.py  build_models.py  cleansing.py  library_test.py  make_ujimaru.py
ujimaru-markov-model/: README.md  pyproject.toml
ujimaru-markov-model/tests/: test_ujimaru_markov_model.py
ujimaru-markov-model/ujimaru_markov_model/: __init__.py  __main__.py  build_model.py  cli.py  ujimaru.py
ujimaru-reformer/: .gitignore  README.md  pyproject.toml
ujimaru-reformer/ujimaru_reformer/: generate.py  sentence_piece.py
ujimaru-text-generate/: README.md  README.rst  pyproject.toml
ujimaru-text-generate/tests/: test_ujimaru_text_generate.py
ujimaru-text-generate/ujimaru_text_generate/: __init__.py  config.gin  generate.py  sentence_piece.py
