[package]
name = "twitter-client"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kuon = "0.0.27"
tokio = { version = "0.2.21", features = ["full"] }
anyhow = "1.0.31"
reqwest = "0.10.6"
