[tool.poetry]
name = "ujimaru-markov-model"
version = "0.2.2"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
include = ["ujimaru_markov_model/data/ujimaru.json"]

[tool.poetry.dependencies]
python = "^3.8"
markovify = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
