[tool.poetry]
name = "ujimaru-markov-model"
version = "0.3.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
include = ["ujimaru_markov_model/data/ujimaru.json"]

[tool.poetry.dependencies]
python = "^3.8"
markovify = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ujimaru = "ujimaru_markov_model.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
