[tool.poetry]
name = "ujimaru-text-generate"
version = "0.0.1"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/hppRC/ujimaru"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gin = "^0.1.6"
jax = "^0.1.68"
trax = "v1.2.0"
numpy = "^1.18.4"
scipy = "^1.4.1"
sentencepiece = "^0.1.91"
tensorflow = "^2.2.0"
matplotlib = "^3.2.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
